--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </form>
         </div>
         <div class="number-randomizer-content">
-            <p id="rand-num-container">1</p>
+            <p id="rand-num-container">Click to start Randomizing a number!</p>
             <button id="rand-num-button">Randomize Number</button>
         </div>
         <div class="name-area-content">
